--- a/app/admin/globals.css
+++ b/app/admin/globals.css
@@ -46,7 +46,6 @@ body {
   pointer-events: all !important;
   overflow-x: hidden;
   background: rgb(var(--gray-100));
-  overflow-x: hidden;
 }
 .container {
   display: flex;
